# libttrssreader

./: .gitignore  .gitingore  README.md
include/: curl_ops.h
src/: CMakeLists.txt  main.cpp
src/session/: CMakeLists.txt  session.cpp  session.h
src/session/categories/: CMakeLists.txt  category.cpp  category.h  categoryList.cpp  categoryList.h
src/session/login/: CMakeLists.txt  login.cpp  login.h
